# SlicerMorphoDepot

./: CMakeLists.txt  README.md
.github/scripts/: check_gh_compatibility.py  extract_gh_commands.py
.github/workflows/: claude-code-review.yml  gh-cli-compatibility.yml
Experiments/: contributor_table_prototype.py
MorphoDepot/: CMakeLists.txt  MorphoDepot.py  MorphoDepotContributors.py
MorphoDepot/MorphoDepotLib/: __init__.py  accession_form.py  contributors.py  forms.py  logic_accession.py  logic_collections.py  logic_contribute.py  logic_controlplane.py  logic_deps.py  logic_github.py  logic_objectstore.py  logic_release.py  logic_repo.py  logic_repoclerk.py  logic_search.py  screenshot_dialog.py  search_form.py  widget_annotate.py  widget_collections.py  widget_configure.py  widget_create.py  widget_release.py  widget_review.py  widget_search.py  widget_validation.py
MorphoDepot/Resources/UI/: MorphoDepotCollections.ui  MorphoDepotReview.ui
MorphoDepot/Testing/: MorphoDepot_UI_Test_Plan.md
MorphoDepot/Testing/Python/: md_e2e.py  md_harness.py  md_run.py  md_tests.py
docs/: MorphoDepot-org-review-findings.md  MorphoDepot-org-test-plan.md  refactor-and-test-plan.md
